# blaco

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: blaco.hpp  blaio.h  blatomic.h  blconfig.h  blconfig.hpp  mcoaio.h  minicoro.h  oslock.h  sockaddr.h  sockaddr.hpp
include/os/linux/: blaio_impl1.h  blconfig_linux.h  fileflags.h  gcc_atomic.h
include/os/windows/: blaco_impl2.hpp  blaio_impl1.h  blconfig_windows.h  blconfig_windows.hpp  msvc_atomic.h
include/utility/: defer.hpp  set_cpu_affinity.hpp
src/: CMakeLists.txt  blaco_priv.h  globals.cpp  mcoaio.c  minicoro.c  tcpserver.cpp  timer.cpp  timer_priv.h
src/net/: sockaddr.cpp
src/os/linux/: blaco.cpp  blaco_impl1.c  fswatcher.cpp
src/os/windows/: blaco.cpp  blaio.c  fswatcher.cpp
test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  testmain.cpp
